--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.20",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
   }
 }
