--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.20",
+    "nodemon": "^2.0.4",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   }
