--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest --verbose --coverage --forceExit --watchAll --maxWorkers=1"
+    "start": "node index.js",
+    "test": "jest --verbose --forceExit --watchAll --maxWorkers=1"
+  },
+  "engines": {
+    "node": "12.16.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
+    "helmet": "^3.23.3",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "winston": "^2.4.0",
